FlightPath 6.x Changelog
========================

2021-03-14
  Removing "blocks" module from Core.
  
  Adding various modules to core.
  

2021-02-20
  Added the base_url to the server name when sending mysql errors via email.

2020-10-07
	Initial commit of 6.x branch.  There are about to be various changes to FlightPath, which warrants 
	a new major version.