@@ -1,6 +1,14 @@
 FlightPath 6.x Changelog
 ========================
 
+2021-04-05
+  Making new degrees "allow dynamic" by default.
+  
+  Removing outdated settings variables.
+  
+  Documentation for content module.  Fleshed out the basic page content type as well.
+  
+
 2021-03-14
   Removing "blocks" module from Core.
   
